# menagerie

./: .gitignore  LICENSE  README.org  pyproject.toml
bash/: 0x0  ampersand.sh  bt-audio  cppref  dpkg-sizes  fix-touchpad  fix-vortex-race-3  helpme-test  helpme.sh  icat  idot  isvg  kbd-rate  kitty-update  launch  moji  moon  myougiden-zenity  open  overleaf-git-clone  passmenu  per  promnesia-control  rofi-screenshot  screenshot  translate  uv-upgrade  watchdot  weather  weather-short  weather-us-now-map  xclip-handler  xoff  xon  xrandr-rofi
docs/: cpp-graph.org
python/: ampersand  bike  cpp-graph  dune-people  mypyco  mypyco.py  wget-spider  yt-rss-feed
python/people/: __init__.py  dune.py
src/menagerie/: __init__.py
test/: cpp-graph-test-multi.toml  cpp-graph-test-single.toml  cpp-graph-test.cpp  test-cpp-graph
