[project]
name = "menagerie"
version = "0.1.1"
description = "Add your description here"
readme = {file = "README.org", content-type = "text/org"}
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["bash", "python"] 
# exclude = ["unsorted"]

# This is a major abuse of Python packaging! 
#[tool.setuptools.package-data]
[tool.setuptools.data-files]
bin = ["bash/*", "python/*"]

