[project]
name = "menagerie"
version = "0.1.3"
description = "My script menagerie"
readme = {file = "README.org", content-type = "text/org"}
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# This is a major abuse of Python packaging! 
[tool.setuptools.data-files]
bin = ["bash/*", "python/*"]

[tool.setuptools.exclude-package-data]
"*" = ["**/*~"]